deploy/retrieveUnpackaged/objects/SFL7_Relationship_Map__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Relationships_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CurrentContact2Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Our_Contact__c</fullName>
        <label>Our Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Our_Contact_to_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <label>Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship Map</label>
    <nameField>
        <displayFormat>RM-{000000000}</displayFormat>
        <label>Relationship Map No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>